    its initialization are made after initialization already
    failed no longer assumes the "hasattr" case, since
    there's other scenarios in which this message gets
    emitted, and the message also does not compound onto
    itself multiple times - you get the same message for
    each attempt at usage. The misnomer "compiles" is being
    traded out for "initialize".
    
  - Added an assertion during flush which ensures
    that no NULL-holding identity keys were generated
    on "newly persistent" objects.
    This can occur when user defined code inadvertently
    triggers flushes on not-fully-loaded objects.

  - lazy loads for relationship attributes now use
    the current state, not the "committed" state,
    of foreign and primary key attributes
    when issuing SQL, if a flush is not in process.
    Previously, only the database-committed state would 
    be used.  In particular, this would cause a many-to-one
    get()-on-lazyload operation to fail, as autoflush
    is not triggered on these loads when the attributes are
    determined and the "committed" state may not be 
    available.  [ticket:1910]
    
  - A new flag on relationship(), load_on_pending, allows
    the lazy loader to fire off on pending objects without a
    flush taking place, as well as a transient object that's
    been manually "attached" to the session. Note that this
    flag blocks attribute events from taking place when an
    object is loaded, so backrefs aren't available until
    after a flush. The flag is only intended for very
    specific use cases.
  
  - Another new flag on relationship(), cascade_backrefs,
    disables the "save-update" cascade when the event was
    initiated on the "reverse" side of a bidirectional 
    relationship.   This is a cleaner behavior so that
    many-to-ones can be set on a transient object without
    it getting sucked into the child object's session,
    while still allowing the forward collection to 